part_02/grammar.txt
program
  : expr+

expr
  : term

term
  : factor ((PLUS | MINUS) factor)*

factor
  : atom ((MUL | DIV | MOD) atom)*

atom
  : number
  | '(' expr ')'

number
  : digit+ (".")? digit*

digit
  : [0-9]

PLUS
  : '+'

MINUS
  : '-'

MUL
  : '*'

DIV
  : '/'

MOD
  : '%'
