article_03/parser.py
from ast import ProgramNode, Point, NumberNode, BinaryOpNode


def parse(tokens):
    pos = 0
    token = tokens[pos]

    def get_next_token():
        nonlocal pos, token
        if not token.type == "EOF":
            pos += 1
            token = tokens[pos]

    def parse_program():
        ast = ProgramNode(tokens)
        while not token.type == "EOF":
            ast.children.append(parse_expr())
            get_next_token()
        return ast

    def parse_expr():
        return parse_term()

    def parse_term():
        node = parse_factor()
        if not token.type == "OPERATOR":
            get_next_token()
        while token.value in ("+", "-"):
            op = token
            get_next_token()
            node = BinaryOpNode(
                node, op, parse_factor(), node.start, Point(
                    token.line, token.end))
        return node

    def parse_factor():
        node = parse_atom()
        if not token.type == "OPERATOR":
            get_next_token()
        while token.value in ("*", "/", "%"):
            op = token
            get_next_token()
            node = BinaryOpNode(
                node, op, parse_atom(), node.start, Point(
                    token.line, token.end))
        return node

    def parse_atom():
        if token.type == "NUMBER":
            return NumberNode(
                token.value, Point(
                    token.line, token.start), Point(
                    token.line, token.end))

    return parse_program()
